[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/treat_band.glb" type="PackedScene" id=1]
[ext_resource path="res://resources/shiny_metal.tres" type="Material" id=2]
[ext_resource path="res://scenes/treat_mesh.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/VR/treat_band.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.34902, 0.160784, 0.0470588, 1 )
clearcoat_enabled = true
clearcoat = 1.0
clearcoat_gloss = 0.48
subsurf_scatter_enabled = true
subsurf_scatter_strength = 1.0

[node name="treat_band" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Cube002" parent="." index="1"]
material/0 = SubResource( 1 )

[node name="Cube003" parent="." index="2"]
material/0 = ExtResource( 2 )

[node name="Cylinder002" parent="." index="3"]
material/0 = ExtResource( 2 )

[node name="Cube004" parent="." index="4"]
material/0 = ExtResource( 2 )

[node name="treat0" parent="." index="5" instance=ExtResource( 3 )]
transform = Transform( -1.89993e-09, 0, -0.0434652, 0, 0.0787991, 0, 0.0434652, 0, -1.89993e-09, -0.00119692, 0.00511507, 0 )

[node name="treat1" parent="." index="6" instance=ExtResource( 3 )]
transform = Transform( -1.85784e-09, -0.0164935, -0.0425024, -3.97676e-10, 0.0770536, -0.00909777, 0.0434652, 0, -1.89993e-09, -0.0139643, 0.0043171, 0 )

[node name="treat2" parent="." index="7" instance=ExtResource( 3 )]
transform = Transform( -1.51025e-09, -0.0478104, -0.0345506, -1.15276e-09, 0.0626376, -0.026372, 0.0434652, 0, -1.89993e-09, -0.0275295, -0.0012686, 0 )

[node name="treat3" parent="." index="8" instance=ExtResource( 3 )]
transform = Transform( -1.86674e-09, 0.0146641, -0.042706, 3.53567e-10, 0.0774226, 0.00808868, 0.0434652, 0, -1.89993e-09, 0.0127673, 0.00431712, 0 )

[node name="treat4" parent="." index="9" instance=ExtResource( 3 )]
transform = Transform( -1.74879e-09, 0.0307994, -0.0400076, 7.42604e-10, 0.0725306, 0.0169888, 0.0434652, 0, -1.89993e-09, 0.0255346, -7.16448e-05, 0 )
